--- a/widescreen.css
+++ b/widescreen.css
@@ -1,5 +1,22 @@
-.black-fill-rectangle{
-	width:200px;
-	height:200px;
-	background:#069;
+.black-left-fill-rectangle{
+  width:200px;
+  min-height: 100vh;
+  position: fixed;
+  background:black;
+}
+
+.black-rotated-fill-rectangle{
+  transform: rotate(140deg);
+  float: left;
+  margin-top: -12px;
+  margin-left: 149px;
+  width: 150px;
+  height: 50px;
+  background:black;
+}
+
+.black-top-fill-rectangle{
+  min-width: 100vh;
+  height: 100px;
+  background:black;
 }
