--- a/widescreen.css
+++ b/widescreen.css
@@ -8,15 +8,21 @@
 .black-rotated-fill-rectangle{
   transform: rotate(140deg);
   float: left;
-  margin-top: -12px;
-  margin-left: 129px;
+  margin-top: -33px;
+  margin-left: 96px;
   width: 150px;
-  height: 50px;
+  height: 75px;
   background:black;
+}
+
+.events-top-fill-rectangle{
+  min-width: 100vh;
+  height: 15px;
+  background:grey;
 }
 
 .black-top-fill-rectangle{
   min-width: 100vh;
-  height: 90px;
+  height: 50px;
   background:black;
 }
