--- a/pages/css/smallscreen.css
+++ b/pages/css/smallscreen.css
@@ -1,4 +1,4 @@
-.black-left-fill-rectangle{
+/*.black-left-fill-rectangle{
     width:180px;
     min-height: 100vh;
     position: fixed;
@@ -19,4 +19,4 @@
     min-width: 100vh;
     height: 12vh;
     background:black;
-}
+}*/
