--- a/pages/css/widescreen.css
+++ b/pages/css/widescreen.css
@@ -45,3 +45,7 @@
   background:black;
   
 }
+
+/*-------------------------Caroussel------------------------*/
+
+/*--------------Fin Caroussel --------------------*/
