--- a/pages/css/widescreen.css
+++ b/pages/css/widescreen.css
@@ -1,3 +1,9 @@
+html{
+
+  font-size:14px;
+  font-family: 'Roboto';
+}
+
 .center
 {
   text-align: center;
@@ -6,34 +12,34 @@
 
 .navbar-default.navbar-expand-sm.navbar-dark.bg-dark{
   margin-left: 160px; 
-  padding: 8px 0px 5px 60px;
-  font-family: 'Roboto', sans-serif;
+  padding: 6px 0px 5px 60px;
+
 }
 
 .black-top-fill-rectangle{
   min-width: 100vh;
   height: 55px;
   background:black;
-  font-family: 'Roboto', sans-serif;
+
 }
 
 .events-top-fill-rectangle{
   min-width: 100vh;
   height: 26px;
   background:grey;
-  font-family: 'Roboto', sans-serif;
+
   
 }
 
-.black-left-fill-rectangle{
+/*.black-left-fill-rectangle{
   width:144px;
   min-height: 100vh;
   margin-top: -45px;
   margin-left: -246px;
   float: left;
   background:black;
-  font-family: 'Roboto', sans-serif;
-}
+
+}*/
 
 .black-rotated-fill-rectangle{
   transform: rotate(140deg);
@@ -45,6 +51,8 @@
   background:black;
   
 }
+
+
 
 /*-------------------------Caroussel------------------------*/
 
