--- a/source/arcSite/arc.css
+++ b/source/arcSite/arc.css
@@ -53,14 +53,15 @@
     background-color: #3e3e3e;
   }
   .navbar .navbar-toggle {
-    border-color: #3e3e3e;
+    border-color: #ffffff;
   }
   .navbar .navbar-toggle:hover,
   .navbar .navbar-toggle:focus {
-    background-color: #3e3e3e;
+    background-color: #ffffff;
   }
   .navbar .navbar-toggle .navbar-toggler-icon {
     color: #ffffff;
+    /* background-image:url("data:source/img/svg+xml,%3csvg viewBox='0 0 30 30'"); */
   }
   .navbar .navbar-collapse,
   .navbar .navbar-form {
@@ -75,7 +76,7 @@
   
   @media (max-width: 575px) {
     .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item {
-      color: #ffffff;
+      color: #000000;
     }
     .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:hover,
     .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:focus {
@@ -89,7 +90,7 @@
   
   @media (max-width: 767px) {
     .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item {
-      color: #ffffff;
+      color: #000000;
     }
     .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:hover,
     .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:focus {
@@ -103,7 +104,7 @@
   
   @media (max-width: 991px) {
     .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item {
-      color: #ffffff;
+      color: #000000;
     }
     .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:hover,
     .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:focus {
@@ -117,7 +118,7 @@
   
   @media (max-width: 1199px) {
     .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item {
-      color: #ffffff;
+      color: #000000;
     }
     .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
     .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
@@ -130,7 +131,7 @@
   }
   
   .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item {
-    color: #ffffff;
+    color: #000000;
   }
   .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:hover,
   .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:focus {
