--- a/pages/css/widescreen.css
+++ b/pages/css/widescreen.css
@@ -16,12 +16,12 @@ html{
 
 }
 
-.black-top-fill-rectangle{
+/*.black-top-fill-rectangle{
   min-width: 100vh;
   height: 55px;
   background:black;
 
-}
+}*/
 
 .events-top-fill-rectangle{
   min-width: 100vh;
