--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -161,7 +161,7 @@
   top: 160;
   bottom: 160;
   left: 0;
-  /* z-index: 100; Behind the navbar */
+  z-index: 100; /*Behind the navbar */
   padding: 25px 0 0; /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
@@ -175,12 +175,12 @@
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
 
-@supports ((position: -webkit-sticky) or (position: sticky)) {
+/* @supports ((position: -webkit-sticky) or (position: sticky)) {
   .sidebar-sticky {
     position: -webkit-sticky;
     position: sticky;
   }
-}
+} */
 
 .sidebar .nav-link {
   font-weight: 500;
