--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -262,6 +262,42 @@ span.navbar-toggler-icon-2 {
   text-anchor: middle;
 }
 
+.cookie-alert {
+  position: fixed;
+  bottom: 100px;
+  right:20px;
+  border-radius: 10px;
+  background:#2f2f2f;
+  color:#fff;
+  padding:10px 15px;
+  width:280px;
+  z-index:100;
+}
+.cookie-alert a { 
+  display:block;
+  text-align: center;
+  padding:5px 10px;
+  margin:8px auto 0 auto;
+  border-radius: 10px;
+  background:transparent;
+  border: 2px solid #46A2D9;
+  color:#46A2D9;
+  transition: all .3s ease;
+}
+  .cookie-alert a:hover {
+     background: #46A2D9;
+     color:#2f2f2f;
+  }
+@media only screen and (max-width:480px) {
+  .cookie-alert {
+     text-align: center;
+     left: 0; right: 0;;
+       margin: 0 auto;
+     max-width:700px;
+     padding:10px 30px;
+  }
+
+
 @media (min-width: 768px) {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
